# ProgettoDocumentazione01Settembre

documentazione_flow/: .gitignore  DOCUMENTAZIONE_RAG.md  README.md  application_documentation.md  pyproject.toml  ragflowproject_documentation.md  stop_loop.py  test_fix.py
documentazione_flow/faiss_index_medical/: index.faiss  index.pkl
documentazione_flow/src/documentazione_flow/: main.py
documentazione_flow/src/documentazione_flow/crews/rag_crew/: rag_crew.py
documentazione_flow/src/documentazione_flow/crews/rag_crew/config/: agents.yaml  tasks.yaml
documentazione_flow/src/documentazione_flow/docs/: genindex.html  index.html  py-modindex.html  search.html
documentazione_flow/src/documentazione_flow/tools/: documentation_analyzer_tool.py  rag_tool.py  user_input_tool.py
documentazionevenv/: pyvenv.cfg
documentazionevenv/Scripts/: activate  activate.bat  dumppdf.py  pdf2txt.py
