[project]
name = "documentazione_flow"
version = "0.1.0"
description = "documentazione_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0",
    "faiss-cpu>=1.12.0",
    "lxml>=6.0.1",
]

[project.scripts]
kickoff = "documentazione_flow.main:kickoff"
run_crew = "documentazione_flow.main:kickoff"
plot = "documentazione_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
